piccole modifiche PdQ

--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_2_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_2_0_0.tex
@@ -108,25 +108,25 @@
 				L'architettura prodotta rispetta le regole di progettazione che ne garantiscono la completezza. Ad esempio si evitano \gloss{package} senza elementi, classi non usate, parametri senza un tipo, ecc.
 				Gli obiettivi relativi alla completezza dell'architettura e le metriche ad essi associate sono i seguenti:
 		 		\begin{itemize}
-					\item \textbf{Numero di violazioni della completezza architetturale di alta importanza}: l'obiettivo stabilito per la metrica è il valore 0;
-					\item \textbf{Numero di violazioni della completezza architetturale di media importanza}: l'obiettivo stabilito per la metrica è il valore 0;
-					\item \textbf{Numero di violazioni della completezza architetturale di bassa importanza}: l'obiettivo stabilito per la metrica è il valore 0.
+					\item \textbf{numero di violazioni della completezza architetturale di alta importanza}: l'obiettivo stabilito per la metrica è il valore 0;
+					\item \textbf{numero di violazioni della completezza architetturale di media importanza}: l'obiettivo stabilito per la metrica è il valore 0;
+					\item \textbf{numero di violazioni della completezza architetturale di bassa importanza}: l'obiettivo stabilito per la metrica è il valore 0.
 				\end{itemize}
 				\subparagraph{Correttezza}
 				L'architettura prodotta rispetta le regole di progettazione che ne garantiscono la correttezza rispetto allo standard UML.
 				Gli obiettivi relativi alla correttezza dell'architettura e le metriche ad essi associate sono i seguenti:
 		 		\begin{itemize}
-					\item \textbf{Numero di violazioni della correttezza architetturale di alta importanza}: l'obiettivo stabilito per la metrica è il valore 0;
-					\item \textbf{Numero di violazioni della correttezza architetturale di media importanza}: l'obiettivo stabilito per la metrica è il valore 0;
-					\item \textbf{Numero di violazioni della correttezza architetturale di bassa importanza}: l'obiettivo stabilito per la metrica è il valore 0.
+					\item \textbf{numero di violazioni della correttezza architetturale di alta importanza}: l'obiettivo stabilito per la metrica è il valore 0;
+					\item \textbf{numero di violazioni della correttezza architetturale di media importanza}: l'obiettivo stabilito per la metrica è il valore 0;
+					\item \textbf{numero di violazioni della correttezza architetturale di bassa importanza}: l'obiettivo stabilito per la metrica è il valore 0.
 				\end{itemize}
 				\subparagraph{Stile}
 				L'architettura prodotta non presenta problemi di design, che pur essendo legali per lo standard UML, posso compromettere la qualità generale del sistema. Ad esempio si evitano dipendenze circolari tra i pacchetti, lunghe liste di parametri, ecc.
 				Gli obiettivi relativi allo stile dell'architettura e le metriche ad essi associate sono i seguenti:
 		 		\begin{itemize}
-					\item \textbf{Numero di violazioni dello stile architetturale di alta importanza}: l'obiettivo stabilito per la metrica è il valore 0;
-					\item \textbf{Numero di violazioni dello stile architetturale di media importanza}: l'obiettivo stabilito per la metrica è il valore 0;
-					\item \textbf{Numero di violazioni dello stile architetturale di bassa importanza}: l'obiettivo stabilito per la metrica è il valore 0.
+					\item \textbf{numero di violazioni dello stile architetturale di alta importanza}: l'obiettivo stabilito per la metrica è il valore 0;
+					\item \textbf{numero di violazioni dello stile architetturale di media importanza}: l'obiettivo stabilito per la metrica è il valore 0;
+					\item \textbf{numero di violazioni dello stile architetturale di bassa importanza}: l'obiettivo stabilito per la metrica è il valore 0.
 				\end{itemize}
 				
 			\paragraph{Processo di costruzione del software}
