--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica_1_0_0.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica_1_0_0.tex
@@ -6,7 +6,7 @@
 \version{1.0.0}
 \creaz{15 febbraio 2017}
 \author{\ALL}
-\supervisor{\GG}
+\supervisor{\MM}
 \uso{esterno}
 \dest{\ALL}
 \title{Specifica Tecnica}
