--- a/doc/Esterni/Specifica_tecnica/tex/arch.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/arch.tex
@@ -81,6 +81,13 @@ L'architettura del client è suddivisa in tre moduli, come in figura \ref{fig:cl
 	\caption{Architettura del client.}
 \end{figure}
 
+\subsubsection{Diagrammi}
+I due tipi di diagrammi visualizzabili sul client sono: diagramma delle classi; diagramma di attività.
+
+Il diagramma delle classi è un normale diagramma UML che offre un sottoinsieme dei formalismi UML, ispirato al \emph{20 percent of UML that helps you do 80 percent of your work} di cui parla Martin Fowler in \emph{UML Distilled}.
+
+Il diagramma che noi chiamiamo di attività è, in realtà, un diagramma ``a blocchi'', cioè una sequenza di elementi grafici che rappresentano operazioni atomiche (ad esempio un \texttt{return} o un'assegnazione) oppure raggruppano al loro interno un'altra sequenza di blocchi (ad esempio un blocco \texttt{while} che raggruppa una sequenza di blocchi).
+
 
 
 \subsection{Architettura del server} \label{sec:arch_server}
