--- a/doc/Esterni/Analisi_dei_requisiti/diario.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/diario.tex
@@ -14,6 +14,9 @@
 	0.2.0 & {\LB} (Verificatore) & 06/01/2017 & Verifica UC4.2-UC5.2 \\ \hline
 	0.1.0 & {\AZ} (Verificatore) & 06/01/2017 & Verifica UC1-4.1.8 \\ \hline
 	0.0.11 & {\LS} (Analista) & 04/01/2017 & Stesura UC6-UC7 \\ \hline
+\end{diario}
+\newpage
+\begin{diario}
 	0.0.10 & {\GG} (Analista) & 03/01/2017 & Stesura UC5.6-UC5.18 \\ \hline
 	0.0.9 & {\LS} (Analista) & 03/01/2017 & Stesura UC5.3-UC5.5.6.1 \\ \hline
 	0.0.8 & {\PB} (Analista) & 02/01/2017 & Stesura UC5-UC5.2 \\ \hline
