--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica_1_0_0.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica_1_0_0.tex
@@ -14,6 +14,8 @@
 
 % Per neutralizzare \nogloxy:
 \newcommand{\nogloxy}[1]{#1}
+\newcommand{\subsubsubsection}[1]{\paragraph{#1}}
+\newcommand{\textt}[1]{\texttt{#1}}
 
 % Elenco dei design pattern utilizzati in un documento:
 \newcommand{\listpatternname}{Elenco dei \emph{design pattern}}
