--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -100,3 +100,4 @@ Per rendere più facile la lettura, la prima occorrenza di ogni termine presente
 \newcommand{\spring}{\emph{Spring}}
 \newcommand{\mvc}{\emph{MVC}}
 \newcommand{\requirejs}{\emph{RequireJS}}
+\newcommand{\stringtemplate}{\emph{StringTemplate}}
