lettera + patter + diario ST

--- a/doc/Esterni/Specifica_tecnica/diario.tex
+++ b/doc/Esterni/Specifica_tecnica/diario.tex
@@ -8,13 +8,22 @@
 	0.0.15 & {\PB} (Progettista) & 23/02/2017 & Stesura sezione Tracciamento, Tracciamento Classi-Requisiti e Tracciamento Requisiti-Classe\\ \hline
 	0.0.14 & {\GG} (Progettista) & 22/02/2017 & Stesura SWEDesigner::Server::Stereotype, SWEDesigner::Server::Template, SWEDesigner::Server::Template::Template, SWEDesigner::Server::Template::TemplateAssembler, SWEDesigner::Server::Template::Java, SWEDesigner::Server::Template::JavaTemplate, SWEDesigner::Server::Utility e SWEDesigner::Server::Utility::Compressor \\ \hline
 	0.0.13 & {\AZ} (Progettista) & 20/02/2017 & Stesura SWEDesigner::Server::Project::ParsedFor, SWEDesigner::Server::Project::ParsedIf, SWEDesigner::Server::Project::ParsedWhile, SWEDesigner::Server::Project::ParsedInitialize, SWEDesigner::Server::Project::ParsedReturn, SWEDesigner::Server::Project::ParsedMethod, SWEDesigner::Server::Project::ParsedInstruction, SWEDesigner::Server::Project::ParsedInterface, SWEDesigner::Server::Project::ParsedProgram e SWEDesigner::Server::Project::ParsedType \\ \hline
+\end{diario}
+\newpage
+\begin{diario}
 	0.0.12 & {\AZ} (Progettista) & 18/02/2017 & Stesura SWEDesigner::Server::Project, SWEDesigner::Server::Project::ParsedAssignment, SWEDesigner::Server::Project::ParsedCustom, SWEDesigner::Server::Project::ParsedElement, SWEDesigner::Server::Project::ParsedAttribute e SWEDesigner::Server::Project::ParsedClass\\ \hline
 	0.0.11 & {\LS} (Progettista) & 18/02/2017 & Stesura SWEDesigner::Server::Generator, SWEDesigner::Server::Generator::Generator, SWEDesigner::Server::Generator::GeneratorAssembler, SWEDesigner::Server::Generator::Java, SWEDesigner::Server::Generator::Java::JavaGenerator, SWEDesigner::Server::Parser e SWEDesigner::Server::Parser::Parser\\ \hline
 	0.0.10 & {\LS} (Progettista) & 17/02/2017 & Stesura SWEDesigner::Server::Compiler, SWEDesigner::Server::Compiler::Compiler, SWEDesigner::Server::Compiler::CompilerAssembler, SWEDesigner::Server::Compiler::Java, SWEDesigner::Server::Compiler::Java::JavaCompiler\\ \hline
 	0.0.9 & {\LS} (Progettista) & 16/02/2017 & Stesura SWEDesigner::Server per Classi e componenti del back-end, SWEDesigner::Server::Controller e SWEDesigner::Server::Controller::RequestHandlerController \\ \hline
+\end{diario}
+\newpage
+\begin{diario}
 	0.0.8 & {\GG} (Progettista) & 15/02/2017 & Stesura SWEDesigner::Client::View, SWEDesigner::Client::View::AppView, SWEDesigner::Client::View::DetailsView, SWEDesigner::Client::View::ProjectView e SWEDesigner::Client::View::NewCellView  \\ \hline
 	0.0.7 & {\LB} (Progettista) & 13/02/2017 & Stesura SWEDesigner::Client::Model::Utility, SWEDesigner::Client::Model::Utility::ProjectGenerator, SWEDesigner::Client::Model::Utility::ProjectInitializer, SWEDesigner::Client::Model::Utility::ProjectSaver, SWEDesigner::Client::Model::Utility::ProjectStereotypes e SWEDesigner::Client::Model::Utility::ProjectLoader  \\ \hline
 	0.0.6 & {\LB} (Progettista) & 11/02/2017 & Stesura SWEDesigner::Client::Model::CellTypes::HxAbstractClass, SWEDesigner::Client::Model::CellTypes::HxWhile, SWEDesigner::Client::Model::CellTypes::HxFor, SWEDesigner::Client::Model::CellTypes::HxIf, SWEDesigner::Client::Model::CellTypes::HxAssignment, SWEDesigner::Client::Model::CellTypes::HxAnnotation, SWEDesigner::Client::Model::CellTypes::HxClass, SWEDesigner::Client::Model::CellTypes::ImplementationCell, SWEDesigner::Client::Model::CellTypes::HxInterface, SWEDesigner::Client::Model::CellTypes::HxReturn, SWEDesigner::Client::Model::CellTypes::HxInizialization e SWEDesigner::Client::Model::CellTypes::HxStereotype  \\ \hline
+\end{diario}
+\newpage
+\begin{diario}
 	0.0.5 & {\MM} (Progettista) & 10/02/2017 & Stesura SWEDesigner::Client::Model, SWEDesigner::Client::Model::ProjectCommand, SWEDesigner::Client::Model::NewCellModel, SWEDesigner::Client::Model::NewCellFactory, SWEDesigner::Client::Model::ProjectModel, SWEDesigner::Client::Model::CellTypes::ActivityDiagramElement, SWEDesigner::Client::Model::CellTypes, SWEDesigner::Client::Model::CellTypes::GeneralizationCell, SWEDesigner::Client::Model::CellTypes::ClassDiagramElement e SWEDesigner::Client::Model::CellTypes::ClassDiagramLink \\ \hline
 	0.0.4 & {\PB} (Progettista) & 09/02/2017 & Stesura SWEDesigner::Client per Classi e componenti del front-end, SWEDesigner::Client::Collection e SWEDesigner::Client::Collection::DiagramCollection\\ \hline
 	0.0.3 & {\PB} (Progettista) & 08/02/2017 & Stesura Metodo e formalismo di specifica e descrizione generale dell'architettura, Architettura del client e del server e Protocollo di comunicazione client-server\\ \hline
