--- a/doc/Esterni/Specifica_tecnica/tex/pattern.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/pattern.tex
@@ -4,8 +4,8 @@
 
 \subsection{Dependency injection}
 
-\begin{figure} \label{fig:injector}
-	\includegraphics[scale=0.5]{img/injector.png}
+\begin{figure}[H] \label{fig:injector}
+	\includegraphics[scale=0.8]{img/injector.png}
 	\caption{Dependency Injection.}
 \end{figure}
 
@@ -29,8 +29,8 @@
 
 \subsection{Command}
 
-\begin{figure} \label{fig:command}
-	\includegraphics[scale=0.5]{img/command.png}
+\begin{figure}[H] \label{fig:command}
+	\includegraphics[scale=0.6]{img/command.png}
 	\caption{Command.}
 \end{figure}
 
@@ -57,8 +57,8 @@
 
 \subsection{Factory}
 
-\begin{figure} \label{fig:factory}
-	\includegraphics[scale=0.5]{img/factory.png}
+\begin{figure}[H] \label{fig:factory}
+	\includegraphics[scale=0.34]{img/factory.png}
 	\caption{Factory.}
 \end{figure}
 
@@ -83,8 +83,8 @@
 
 \subsection{Observer}
 
-\begin{figure} \label{fig:observer}
-	\includegraphics[scale=0.5]{img/observer.png}
+\begin{figure}[H] \label{fig:observer}
+	\includegraphics[scale=0.6]{img/observer.png}
 	\caption{Observer.}
 \end{figure}
 
