--- a/doc/Interni/Norme_di_progetto/diario.tex
+++ b/doc/Interni/Norme_di_progetto/diario.tex
@@ -2,7 +2,7 @@
 % da includere con \include{diario}
 
 \begin{diario}
-	2.0.0 & {\GG} (Responsabile) & 22/02/2017 & Approvazione del documento \\ \hline
+	2.0.0 & {\LS} (Responsabile) & 22/02/2017 & Approvazione del documento \\ \hline
 	1.1.1 & {\GG} (Verificatore) & 22/02/2017 & Spostate le definizioni delle metriche dal PdQ alle NdP (in appendice)  \\ \hline
 	1.1.0 & {\GG} (Verificatore) & 10/02/2017 & Verifica del documento \\ \hline
 	1.0.2 & {\LB} (Amministratore) & 08/02/2017 & Ampliate le norme di progettazione (§\ref{sec:design}) e di codifica (§\ref{sec:cod}) \\ \hline
